<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_player_home"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shalebgnew"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerHomeActivity" >

    <ImageView
        android:id="@+id/img_player"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/label_playerpic"
        android:src="@drawable/face" />

    <TextView
        android:id="@+id/lbl_playername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img_player"
        android:layout_toRightOf="@+id/img_player"
        android:text="@string/label_playername"
        android:textSize="32sp"
        tools:context=".AddPlayerActivity" />

    <TextView
        android:id="@+id/lbl_teamname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/img_player"
        android:layout_alignLeft="@+id/lbl_playername"
        android:text="@string/label_teamname"
        android:textColor="#666666"
        android:textSize="24sp"
        tools:context=".AddPlayerActivity" />

    
    <TextView
        android:id="@+id/lbl_season"
        android:textColor="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_player"
        android:text="@string/label_season"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinnerseason"
        android:popupBackground="#FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_player"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/lbl_season" />
    
    
    
    <TextView
        android:id="@+id/statstabletitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lbl_season"
        android:layout_marginTop="20dp"
        android:text="@string/title_statstable"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#300000" />

    <TableLayout
        android:id="@+id/statstable"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/statstabletitle"
        android:layout_below="@+id/statstabletitle" >
    </TableLayout>

    <TextView
        android:id="@+id/calcstatstabletitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statstable"
        android:text="@string/title_calcstatstable"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#300000" />

    <TableLayout
        android:id="@+id/statstableadvanced"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/calcstatstabletitle"
        android:layout_below="@+id/calcstatstabletitle" >
    </TableLayout>

    

</RelativeLayout>